--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <!-- footer -->
 
     <footer>   
+        <!-- derechos -->
         <p> todos los derechos reservados </p>
     </footer>
 </html>
