nueva rama del proyecto

--- a/index.html
+++ b/index.html
@@ -42,5 +42,7 @@
     <footer>   
         <!-- derechos -->
         <p> todos los derechos reservados </p>
+        <!-- redes sociales  -->
+        <img src="" alt="">
     </footer>
 </html>
